--- a/.github/workflows/EKS-CI.yml
+++ b/.github/workflows/EKS-CI.yml
@@ -59,47 +59,6 @@ jobs:
           echo ${{ steps.set-matrix.outputs.eks-matrix }}
           echo ${{ steps.set-matrix.outputs.containerinsight-eks-prometheus-matrix }}
 
-  e2etest-eks:
-    runs-on: ubuntu-latest
-    needs: [get-testing-suites]
-    strategy:
-      max-parallel: 5
-      matrix: ${{ fromJson(needs.get-testing-suites.outputs.eks-matrix) }}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.INTEG_TEST_AWS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.INTEG_TEST_AWS_KEY_SECRET }}
-          aws-region: us-west-2
-
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
-
-      - name: Set up terraform
-        uses: hashicorp/setup-terraform@v1
-
-      - name: Check out testing framework
-        uses: actions/checkout@v2
-        with:
-          repository: 'bjrara/aws-otel-test-framework'
-          path: testing-framework
-
-      - name: Run testing suite on eks
-        run: |
-          if [[ -f testing-framework/terraform/testcases/${{ matrix.testcase }}/parameters.tfvars ]] ; then opts="-var-file=../testcases/${{ matrix.testcase }}/parameters.tfvars" ; else opts="" ; fi
-          cd testing-framework/terraform/eks && terraform init && terraform apply -auto-approve -lock=false $opts -var="testcase=../testcases/${{ matrix.testcase }}"
-
-      - name: Destroy resources
-        if: ${{ always() }}
-        run: |
-          cd testing-framework/terraform/eks && terraform destroy -auto-approve
-
   e2etest-containerinsight-eks-prometheus:
     runs-on: ubuntu-latest
     needs: [ get-testing-suites]
@@ -139,5 +98,5 @@ jobs:
       - name: Destroy resources
         if: ${{ always() }}
         run: |
-          cd testing-framework/terraform/containerinsight_eks_prometheus && terraform destroy -auto-approve
+          cd testing-framework/terraform/containerinsight_eks_prometheus && terraform destroy -var="testcase=../testcases/${{ matrix.testcase }}" -auto-approve
 
